@@ -1,6 +1,7 @@
 package org.aakorea.main.common.security;
 
 import org.aakorea.main.common.config.AdminAuthProperties;
+import org.aakorea.main.common.config.AppCorsProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -23,21 +24,20 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableConfigurationProperties(AdminAuthProperties.class)
+@EnableConfigurationProperties({AdminAuthProperties.class, AppCorsProperties.class})
 public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(
             HttpSecurity http,
+            CorsConfigurationSource corsConfigurationSource,
             RestAuthenticationEntryPoint authenticationEntryPoint,
             RestAccessDeniedHandler accessDeniedHandler
     ) throws Exception {
-        // 1. CORS 설정 활성화 추가
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource))
                 .csrf(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
@@ -57,26 +57,13 @@ public class SecurityConfig {
         return http.build();
     }
 
-    // 2. CORS 정책을 정의하는 Bean 추가
+    // Nginx reverse proxy or a separate frontend host can be allowed through configuration.
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource(AppCorsProperties properties) {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // 허용할 프론트엔드 도메인 (Cloudflare Pages 주소 및 로컬 개발용 주소)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "https://maumtalk.win",                            // 현재 접속 주소
-                "https://c3dffaf8.aakorea-frontend.pages.dev",
-                "http://localhost:5173",
-                "http://172.30.1.16:8080"
-        ));
-
-        // 허용할 HTTP 메서드 (OPTIONS는 Preflight 요청에 필수)
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // 허용할 헤더
+        configuration.setAllowedOrigins(properties.getAllowedOrigins());
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
-
-        // 세션(쿠키)을 사용한 인증을 위해 true로 설정 (현재 SessionCreationPolicy.IF_REQUIRED 사용 중)
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
